<resources>
    <string name="app_name">Programacion_lll</string>

    <string name="conversiones">CONVERSIONES</string>
    <string name="conversor_de_monedas">Conversor de Monedas</string>
    <string name="conversor_de_masa">Conversor de Masa</string>
    <string name="conversor_de_volumen">Conversor de Volumen</string>
    <string name="conversor_de_longitud">Conversor de Longitud</string>
    <string name="conversor_de_almacenamiento">Conversor de Almacenamiento</string>
    <string name="conversor_de_tiempo">Conversor de Tiempo</string>
    <string name="conversor_de_transferencias_de_datos">Conversor de Transferencias de Datos</string>




    <string-array name="paises">
        <item>Seleccione un Pais</item>
        <item>Estados Unidos </item>
        <item>Costa Rica</item>
        <item>Nicaragua</item>
        <item>Honduras </item>
        <item>Panama </item>
        <item>Belice</item>
        <item>Chile</item>
        <item>colombia</item>
        <item>Brazil </item>
        <item>Mexico </item>
    </string-array>


    <string-array name="monedas">
        <item>Euro (europa)</item>
        <item>Bolivares (venezlanos)</item>
        <item>Libras Esterlinas (gbp)</item>
        <item>Pesos (mexicano)</item>
        <item>Pesos (colombiano)</item>
        <item>Pesos (chilenos)</item>
        <item>Pesos (uruguayos)</item>
        <item>Colones (costa rica)</item>
        <item>Guarines (paraguayos)</item>
        <item>dolar (estados unidos)</item>

    </string-array>

    <string-array name="Masa">
        <item>Kilogramos</item>
        <item>Gramos</item>
        <item>Onzas</item>
        <item>Centigramos</item>
        <item>Miligramos</item>
        <item>Decigramos</item>
        <item>Hectogramo</item>
        <item>Decagramos</item>
        <item>Arrobas</item>
        <item>Libras</item>

    </string-array>

    <string-array name="longitud">
        <item>Kilometro</item>
        <item>Hectometro</item>
        <item>Decametro</item>
        <item>Decimetro</item>
        <item>Centimetro</item>
        <item>Milimetro</item>
        <item>Pulgada</item>
        <item>Pie</item>
        <item>Yarda</item>
        <item>Metro</item>

    </string-array>

    <string-array name="unidades">
        <item>Bit</item>
        <item>Byte</item>
        <item>Kilobyte</item>
        <item>Megabyte</item>
        <item>Gigabyte</item>
        <item>Terabyte</item>
        <item>Pentabyte</item>
        <item>Exabyte</item>
        <item>Zettabyte</item>
        <item>Yottabyte</item>
        <item>Broncobyte</item>
        <item>Gopbyte</item>
    </string-array>

    <string-array name="volumen">
        <item>Litro</item>
        <item>Metro Cubico</item>
        <item>Mililitro</item>
        <item>Galon Imperial</item>
        <item>Pinta Inperial</item>
        <item>Tasa Imperial</item>
        <item>Pulguda Cubica </item>
        <item>Pie Cubico</item>
        <item>Cuchara Estadounidense</item>
        <item> Galon Estadounidense</item>
    </string-array>

    <string-array name="tiempo">
        <item>Segundos</item>
        <item>Minuto</item>
        <item>Hora</item>
        <item>Dia</item>
        <item>Semana</item>
        <item>Mes</item>
        <item>Año Natural </item>
        <item>Decada</item>
        <item>Siglo</item>
        <item> </item>
    </string-array>

    <string-array name="almacenamiento">
        <item>Bit</item>
        <item>Byte</item>
        <item>Kilobit</item>
        <item>Megabit</item>
        <item>Gigabit</item>
        <item>Terabit</item>
        <item>Petabit</item>
        <item>Kilobyte</item>
        <item>Megabyte</item>
        <item>Gigabyte</item>

    </string-array>

    <string name="conver_propio">Conversor Propio</string>
    <string name="conver_are">Conversor de Area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad">Cantidad</string>
    <string name="ingrese_el_monto">Ingrese el Monto</string>
    <string name="de">De:</string>
    <string name="convertir">convertir</string>
    <string name="respuesta">Respuesta</string>
    <string name="conversor_propio">Conversor Propio</string>
    <string name="conversor_de_area">Conversor de Area</string>
    <string name="respuesta1">Respuesta:</string>
    <string name="unidades">Unidades</string>


    <string-array name="area">
        <item>Pie Cuadrado</item>
        <item>Vara Cuadrado</item>
        <item>Yarda Cuadrado</item>
        <item>Metro Cuadrado</item>
        <item>Tareas</item>
        <item>Manzana</item>
        <item>Hectárea </item>

    </string-array>
</resources>