<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Masa">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:text="Conversor de Masa" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:textSize="18dp"
        android:text="@string/cantidad" />

    <EditText
        android:id="@+id/edtCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:hint="@string/ingrese_el_monto" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="125dp"
        android:textSize="18dp"
        android:text="@string/de" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="160dp"
        android:textSize="18dp"
        android:text="A" />

    <Spinner
        android:id="@+id/cboMasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="125dp"
        android:entries="@array/Masa" />

    <Spinner
        android:id="@+id/cboMasa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="160dp"
        android:entries="@array/Masa" />

    <Button
        android:id="@+id/idconvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="220dp"
        android:onClick="masa"
        android:text="@string/Convertir"
        android:background="@drawable/custom_butt2"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/txtRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="220dp"/>
</RelativeLayout>