<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TabHost
        android:id="@+id/tbConversor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="horizontal" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/tabPropio"
                    android:layout_width="match_parent"
                    android:layout_height="667dp"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/edtCantidad01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"

                        android:hint="@string/ingrese_el_monto"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/edtCantidad02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:ems="10"

                        android:hint="@string/ingrese_el_monto"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/edtCantidad03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="140dp"
                        android:ems="10"

                        android:hint="@string/ingrese_el_monto"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/idconvertir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginTop="220dp"


                        android:text="@string/convertir" />

                    <TextView
                        android:id="@+id/txtRespuesta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="191dp"
                        android:text="@string/respuesta"
                        android:textSize="20dp" />




                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txtRespuesta1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="150dp"
                        android:layout_marginTop="320dp"
                        android:text="conversor de area" />


                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>